--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -49,7 +49,7 @@
 
       .shadow-lg.flex-grow.bg-white.rounded-16.py-48.px-24.relative
         .absolute.w-full.shadow-sm.text-h5.py-6.px-16.rounded-24.bg-white.flex.flex-row.items-center.whitespace-nowrap{ class: 'top-0 left-1/2 -translate-y-1/2 -translate-x-1/2' }
-          = graphical_icon "graph-stats", css_class: 'h-[24px] w-[24px] mr-12'
+          = graphical_icon "graph-stats-gradient", css_class: 'h-[24px] w-[24px] mr-12'
           Live activity on Exercism
         = ReactComponents::Impact::Map.new
 
