Add header background, fix highlighting, add new gradient bg variant

--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -11,7 +11,7 @@
       = graphical_icon "report", css_class: 'h-[26px] w-[26px] filter-textColor6 mr-16'
       Exercism Impact Report
     %h2.text-h0.mb-12.text-center{ class: 'max-w-[800px]' }
-      We’ve provided
+      We&apos;ve provided
       %strong{ class: 'pl-8 pr-12 font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]' } 104,220,130
       %strong{ class: 'pl-8 pr-8 mr-[-8px] font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]' } minutes
       of free education.
