--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -46,6 +46,32 @@
 
 /* --------------------------------------------------------------------- */
 
+#page-tracks-build {
+    @apply bg-white;
+    header {
+        z-index: 0;
+        width: 100%;
+        height: 501px;
+        left: 0px;
+        top: 64px;
+
+        background: linear-gradient(
+                180deg,
+                rgba(251, 251, 255, 0) 79.36%,
+                #f4f4fd 100%
+            ),
+            linear-gradient(
+                180deg,
+                #fafaff 0%,
+                rgba(250, 250, 255, 0.677852) 24.48%,
+                rgba(250, 250, 255, 0) 77.6%,
+                #fafaff 100%
+            ),
+            url("bg-tracks-header@2x.jpg"), #fafaff;
+        background-size: cover;
+    }
+}
+
 .contributor-credit-block {
     @apply flex items-center justify-between mb-8;
     @apply border-1 border-borderLight rounded-8 px-16 py-8;
@@ -63,7 +89,7 @@
 }
 
 .report-stat {
-    @apply flex flex-col py-16 px-24 shadow-sm;
+    @apply flex flex-col py-16 px-24 shadow-sm bg-white rounded-8;
     & .stat-name {
         @apply flex items-center;
         @apply label-large;
@@ -89,7 +115,7 @@
 }
 
 .track-status {
-    @apply rounded-16 px-32 py-24 shadow-lgZ1 text-textColor1 mb-32;
+    @apply rounded-16 px-32 py-24 shadow-lgZ1 text-textColor1 mb-32 bg-white;
 }
 
 .tooling-status {
@@ -217,8 +243,9 @@
 
 .action-required {
     @apply py-8 px-16 mb-24;
-    @apply label-large text-16 bg-lightPurple;
-    @apply border-1 border-gradient rounded-16;
+    @apply label-large text-16;
+    background-color: rgb(250, 250, 255);
+    @apply border-1 border-gradient-lightPurple rounded-16;
 
     a {
         @apply underline;
@@ -272,5 +299,26 @@
 
     & .record-value {
         @apply text-label-timestamp font-semibold;
+    }
+}
+
+/* .highlight-text{
+    @apply inline-block p-12;
+    @apply font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%];
+} */
+.highlight-text {
+    @apply inline relative z-1;
+
+    background-color: transparent;
+    &:before {
+        content: " ";
+        @apply absolute -z-1;
+        top: -1px;
+        left: -5px;
+        width: 100%;
+        height: 100%;
+        background-image: url("graphics/impact-highlight.svg");
+        background-size: 100% 100%;
+        transform: scale(1.15, 1.8);
     }
 }
