--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -310,6 +310,7 @@
     @apply inline-block p-12;
     @apply font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%];
 } */
+
 .highlight-text {
     @apply inline relative z-1;
 
@@ -323,6 +324,9 @@
         height: 100%;
         background-image: url("graphics/impact-highlight.svg");
         background-size: 100% 100%;
+        /* len = 5 */
         transform: scale(1.15, 1.8);
+        /* len = 1 */
+        /* transform: scale(1.5, 6.5); */
     }
 }
