--- a/app/views/tracks/build.html.haml
+++ b/app/views/tracks/build.html.haml
@@ -7,14 +7,15 @@
   .lg-container.grid.grid-cols-3.gap-48.relative.mt-40
     .col-span-2
       %h1.text-h1.mb-12.text-48.font-bold.z-1
-        .highlight-text 25,000
+        -# TODO provide proper highlighting for different length numbers
+        .highlight-text{ "num-length": @track.num_students.to_s.length }= @track.num_students
         students have developed their #{@track.title} skills.
       .grid.grid-cols-3.mb-32.gap-16
         .report-stat
           .stat-name
             Students
             = graphical_icon "info-circle"
-          .current-number 25,645
+          .current-number= @track.num_students
           .growth +939 per day
         .report-stat
           .stat-name
