Patch for team page (#2976)
* Update Loretta's and Jonathan's bio

* Update bio of Erik

* Add a photo of Aron

* Resize, crop, tweak image

* Remove jpeg duplicate img

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -98,7 +98,7 @@
               %h3
                 = link_to "Erik Schierboom", "https://twitter.com/ErikSchierboom", target: "_blank", rel: 'noopener'
               .handle Head of Open Source
-              %p Erik works full-time for Exercism, building the software and infrastructure that powers the open-source elements of the platform, and ensuring each track a joy to work with. He was a top Exercism volunteer before joining full-time. He is a polyglot developer who loves to learn new languages.
+              %p Erik is a polyglot developer who loves learning new languages. He builds the software and infrastructure that powers the open-source elements of the platform, ensuring each track is a joy to work with. He was a top Exercism volunteer before joining full-time.
               %ul.links
                 %li
                   = link_to "https://www.erikschierboom.com", target: "_blank", rel: 'noopener' do
@@ -138,7 +138,7 @@
               %h3
                 = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener'
               .handle Head of Fundraising and Partnerships
-              %p Loretta is motivated by the transformational power of fundraising, and has a track record of successful strategic and operational delivery across complex organisations including Cancer Research UK, UNICEF, NSPCC. and Abertay University. She is a qualified business coach with a passion for developing fundraisers' skills.
+              %p Loretta is motivated by the transformational power of fundraising and is a qualified business coach with a passion for developing fundraisers&apos; skills. Out of work she spends her time with family and friends, walking her two feisty little Border Terriers and reading.
               %ul.links
                 %li
                   = link_to "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener' do
@@ -154,7 +154,7 @@
               %h3
                 = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener'
               .handle Community Manager
-              %p Jonathan loves to help others grow and find their unique space in the world. With an entrepreneurial streak and multi-cultural background, he loves to listen and build deep and lasting community. Away from work he spends most of his time being father to his adorable but chaotic daughter.
+              %p Jonathan loves connecting with people and hearing stories of how people are where they are in life. He is curious to learn and has been slowly getting to grips with programming. He loves the outdoors and has a young family who live in the world's best city...Cape Town, South Africa.  Seeing people gain access to skills that empower and improve life is what drives him every day!
               %ul.links
                 %li
                   = link_to "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener' do
