--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -323,10 +323,8 @@
         width: 100%;
         height: 100%;
         background-image: url("graphics/impact-highlight.svg");
-        background-size: 100% 100%;
-        /* len = 5 */
-        transform: scale(1.15, 1.8);
-        /* len = 1 */
-        /* transform: scale(1.5, 6.5); */
+        /* changing it to cover now */
+        background-size: cover;
+        /* transform: scale(1.15, var(--transform-y)); */
     }
 }
