--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -195,7 +195,7 @@
     details[open] {
         summary {
             &:after {
-                content: url("icons/chevron-right.svg");
+                @apply -rotate-90 transition-all;
             }
         }
     }
@@ -271,6 +271,7 @@
     @apply before-icon;
     &:after {
         content: url("icons/chevron-down.svg");
+        @apply transition-all;
         @apply filter-textColor6;
         height: 16px;
         width: 16px;
@@ -299,6 +300,16 @@
     @apply first-of-type:mt-4 last-of-type:mb-4 mb-8;
     & .record-name {
         @apply label-large text-16;
+        @apply flex items-center;
+        & .c-concept-icon,
+        img {
+            @apply mr-12;
+        }
+
+        & img {
+            width: 32px;
+            height: 32px;
+        }
     }
 
     & .record-value {
@@ -316,15 +327,10 @@
 
     background-color: transparent;
     &:before {
-        content: " ";
+        content: "";
         @apply absolute -z-1;
-        top: -1px;
-        left: -5px;
         width: 100%;
-        height: 100%;
+        height: 1.2em;
         background-image: url("graphics/impact-highlight.svg");
-        /* changing it to cover now */
-        background-size: cover;
-        /* transform: scale(1.15, var(--transform-y)); */
     }
 }
