Remove extra text

--- a/app/views/tracks/build.html.haml
+++ b/app/views/tracks/build.html.haml
@@ -112,7 +112,7 @@
             Learn More
 
         .action-required
-          Action required: Get Test Runners to Level 3. #{@track.title} is currently utilising a Level 2 Test Runner. Find out more.
+          Action required: Get Test Runners to Level 3. #{@track.title} is currently utilising a Level 2 Test Runner.
           = link_to "" do
             Find out more.
 
