Fix track header caching when enabling/disabling learning mode

--- a/app/views/tracks/_header.html.haml
+++ b/app/views/tracks/_header.html.haml
@@ -1,4 +1,4 @@
-= cache "#{user_signed_in?}/track/#{track.id}/header/#{selected_tab}/#{track.updated_at.to_i}/#{Time.zone.today}" do
+= cache "#{user_signed_in?}/track/#{track.id}/header/#{selected_tab}/#{track.updated_at.to_i}/#{practice_mode}/#{Time.zone.today}" do
   .lg-container.container
     .flex.items-center
       .flex-grow
