--- a/app/views/tracks/build.html.haml
+++ b/app/views/tracks/build.html.haml
@@ -95,7 +95,7 @@
         .usage-stats-header
           %h4 Usage statistics
         %details.mb-10
-          %summary.--syllabus #{@track.num_concepts}/#{@track.concepts.size} concepts created
+          %summary.--syllabus #{@track.concepts.size}/?? concepts created
           - @track.concepts.each do |concept|
             .record-row
               .record-name
@@ -110,6 +110,7 @@
                 = exercise_icon exercise
                 = exercise.title
               .record-value #{exercise.num_published_solutions} completions (30% of attempts)
+
         = render ReactComponents::Track::Credits.new(1, "volunteer", ['https://avatars.githubusercontent.com/u/66035744?v=4'])
 
 
@@ -137,6 +138,7 @@
           .record-row
             .record-name Mean Runtime
             .record-value 2.84s
+
         = render ReactComponents::Track::Credits.new(1, "volunteer", ['https://avatars.githubusercontent.com/u/66035744?v=4'])
 
 
@@ -156,6 +158,7 @@
           .record-row
             .record-name Analysis Display Rate
             .record-value 48%
+
         = render ReactComponents::Track::Credits.new(1, "volunteer", ['https://avatars.githubusercontent.com/u/66035744?v=4'])
 
       .track-team-group
@@ -177,6 +180,7 @@
           .record-row
             .record-name Representation Display Rate
             .record-value 58%
+
         = render ReactComponents::Track::Credits.new(1, "volunteer", ['https://avatars.githubusercontent.com/u/66035744?v=4'])
 
       .track-team-group
@@ -188,14 +192,15 @@
 
         .usage-stats-header
           %h4 Usage statistics
-        %details.mb-10
-          %summary.--practice-exercises #{@user_track.practice_exercises.size}/30  practice exercise created
+        %details
+          %summary.--practice-exercises #{@user_track.practice_exercises.size}/??  practice exercise created
           - @user_track.practice_exercises.each do |exercise|
             .record-row
               .record-name
                 = exercise_icon exercise
                 = exercise.title
               .record-value #{exercise.num_published_solutions} completions (30% of attempts)
+
         = render ReactComponents::Track::Credits.new(1, "volunteer", ['https://avatars.githubusercontent.com/u/66035744?v=4'])
 
     .col-span-1
@@ -212,6 +217,13 @@
               = avatar(contributor)
               = contributor.name
             = render ViewComponents::Reputation.new(contributor.reputation, flashy: true, size: :small)
+
+        .inline-grid.grid-cols-6.gap-16.mt-20.mb-16
+          - 10.times do
+            = graphical_icon "avatar-placeholder", css_class: 'h-[32px] w-[32px]'
+          .col-span-2.self-center.leading-170.text-14.font-semibold.text-lightBlue
+            + 41 more
+
         .rounded-8.py-16.px-20.bg-backgroundColorG
           %h6.text-h6.leading-150.mb-4 We 💙 our volunteers
           %p.text-textColor5.leading-150.text-14.mb-4
