--- a/app/views/tracks/approaches/tooltip_locked.html.haml
+++ b/app/views/tracks/approaches/tooltip_locked.html.haml
@@ -1,10 +1,11 @@
 .c-generic-tooltip.text-14{ class: "!py-16 !px-24 !max-w-[420px]" }
   %p.text-16.text-white.font-semibold.leading-170.mb-12
     Struggling with this exercise?
- 
-  %p.mb-4.leading-150
-    Unlock the Dig Deeper tab to see how the community approached and solved #{@exercise.title}. 
 
-  / TODO: add button to manually unlock help
+  %p.mb-4.leading-150
+    Unlock the Dig Deeper tab to see how the community approached and solved #{@exercise.title}.
+
+  = button_to "Unlock this tab", unlock_help_api_solution_url(@solution.uuid), method: :patch, class: 'btn-primary btn-l'
+
   .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
     Warning! We highly recommend you try your best without revealing Approaches first.
