--- a/app/views/tracks/community_solutions/tooltip_locked.html.haml
+++ b/app/views/tracks/community_solutions/tooltip_locked.html.haml
@@ -5,6 +5,7 @@
   %p.mb-4.leading-150
     Unlock Community Solutions to see how the community approached and solved #{@exercise.title}.
 
-  / TODO: add button to manually unlock help
+  = button_to "Unlock this tab", unlock_help_api_solution_url(@solution.uuid), method: :patch, class: 'btn-primary btn-l'
+
   .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
     Warning! We highly recommend you try your best without revealing Community Solutions first.
